--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap');
-
 :root {
   --font-color: #495057;
   --heading-color: #343a40;
@@ -18,8 +15,8 @@
   --transparent-text: rgba(0, 0, 0, 0.7);
   --transparent-bg: rgba(0, 0, 0, 0.05);
   --light-transparent-bg: rgba(255, 255, 255, 0.1);
-  --font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, 'Helvetica Neue',
-    'Roboto', Roboto, Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+  --font-family: 'Source Code Pro', monospace, -apple-system, BlinkMacSystemFont,
+    'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
     'Segoe UI', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   --code-font-family: Menlo, 'Roboto Mono', Courier New, monospace;
   --border-color: var(--dark-font-color);
@@ -93,6 +90,7 @@ a {
 
 .navbar a.brand {
   font-size: 1.5rem;
+  font-weight: 700;
   border: none;
   background: transparent !important;
   color: var(--dark-font-color);
@@ -174,8 +172,8 @@ a {
 }
 
 .post-row {
-  padding: 2rem 0.5rem;
-  display: flex;
+  padding: 1rem 0.5rem;
+  display: block;
   align-items: center;
 }
 .post-title {
@@ -188,6 +186,10 @@ a {
   color: var(--light-font-color);
 }
 @media screen and (min-width: 800px) {
+  .post-row {
+    padding: 2rem 0.5rem;
+    display: flex;
+  }
   .post-wrap {
     margin-top: 0px;
   }
