--- a/src/components/extraStyle/articleMarkup.css
+++ b/src/components/extraStyle/articleMarkup.css
@@ -1,9 +1,9 @@
 .blog-post-content {
-  font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   font-kerning: auto;
   font-variant-ligatures: none;
   letter-spacing: 0.05rem;
   line-height: 1.75;
+  font-size: 0.9rem;
 }
 
 .blog-post-content h1,
